# trains-rs

./: .gitignore  Cargo.toml  README.md  index.html  trains-rs-1bc4eac3717c1429.js  trains-rs-1bc4eac3717c1429_bg.wasm  trains-rs-8f54413041195d7d.js  trains-rs-8f54413041195d7d_bg.wasm  trains-rs-c87150e93a00c26a.js  trains-rs-c87150e93a00c26a_bg.wasm  trains-rs-d85b5ee47e7bbe55.js  trains-rs-fc20bd15ad97a209.js  trains-rs-fc20bd15ad97a209_bg.wasm
.github/workflows/: rust-wasm-deploy.yml  rust-wasm.yml
src/: app.rs  bg_image.rs  main.rs  marching_squares.rs  path_utils.rs  perlin_noise.rs  structure.rs  train.rs  train_tracks.rs  transform.rs  vec2.rs
src/app/: heightmap.rs  structure.rs  train.rs
src/app/heightmap/: noise_expr.rs  parallel_tile_gen.rs  parser.rs  progressive_tile_gen.rs
src/structure/: belts.rs  pipes.rs  power_network.rs  structure_type.rs
src/train/: dijkstra.rs  path_bundle.rs
src/train_tracks/: bezier.rs  gentle.rs  path_bundle.rs  straight.rs  tight.rs
