[package]
name = "trains-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
cgmath = "0.18.0"
eframe = "0.31.1"
nom = "8.0.0"
ordered-float = "5.0.0"
# rand = { version = "0.9.1", features = ["no-std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.77", features = ["Storage", "Window"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
